log
Sat Apr 23 01:31:30 UTC 2022: 
 tests:  1|8
total_score: 0/70
b55c71a
Sat Apr 23 06:39:47 UTC 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
fa36367
Sat Apr 23 07:18:40 UTC 2022: 
 treemap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:12: error: ‘new’ undeclared (first use in this function); did you mean ‘getw’?
     return new;
            ^~~
            getw
treemap.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:10: error: ‘aux’ undeclared (first use in this function)
   tree * aux=map->root;
          ^~~
treemap.c:87:14: error: ‘map’ undeclared (first use in this function)
   tree * aux=map->root;
              ^~~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a788cb1
Sat Apr 23 07:19:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:10: error: ‘aux’ undeclared (first use in this function)
   tree * aux=map->root;
          ^~~
treemap.c:87:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:87:14: error: ‘map’ undeclared (first use in this function)
   tree * aux=map->root;
              ^~~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1abc745
Sat Apr 23 07:20:32 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   treeNode * aux=map->root;
   ^~~~~~~~
   TreeNode
treemap.c:87:18: error: ‘map’ undeclared (first use in this function)
   treeNode * aux=map->root;
                  ^~~
treemap.c:87:18: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:88:10: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key’
   if(tree->key==aux->key)
          ^~
treemap.c:88:20: error: request for member ‘key’ in something not a structure or union
   if(tree->key==aux->key)
                    ^~
treemap.c:90:15: error: request for member ‘data’ in something not a structure or union
     return aux->data;
               ^~
treemap.c:92:6: error: expected ‘(’ before ‘else’
   if else(tree->key>aux->key)
      ^~~~
treemap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
34f6a9f
